# lex-ros2

./: .rosinstall.master  .travis.yml  CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: build_and_test.yml  build_and_test_release_latest.yml  release_latest.repos
lex_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
lex_common_msgs/srv/: AudioTextConversation.srv
lex_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
lex_node/config/: sample_configuration.yaml
lex_node/include/lex_node/: lex_node.h
lex_node/launch/: lex.launch.py
lex_node/src/: lex_node.cpp  main.cpp
lex_node/test/: lex_node_test.cpp
